<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_20"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_mini"
        android:layout_marginHorizontal="@dimen/margin_standard"
        android:layout_marginVertical="@dimen/margin_standard"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintWidth_default="spread"
        android:background="@drawable/background_of_menu"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_frame">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_test"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginHorizontal="@dimen/margin_mini"
            android:text="@string/button_1_string"
            android:textColor="@color/grey_20"
            android:textSize="@dimen/text_size_for_menu_buttons" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_test"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginHorizontal="@dimen/margin_mini"
            android:text="@string/button_2_string"
            android:textColor="@color/grey_20"
            android:textSize="@dimen/text_size_for_menu_buttons" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_test"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginHorizontal="@dimen/margin_mini"
            android:text="@string/button_3_string"
            android:textColor="@color/grey_20"
            android:textSize="@dimen/text_size_for_menu_buttons" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_test"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginHorizontal="@dimen/margin_mini"
            android:text="@string/button_4_string"
            android:textColor="@color/grey_20"
            android:textSize="@dimen/text_size_for_menu_buttons" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ripple_test"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_mini"
            android:layout_marginHorizontal="@dimen/margin_mini"
            android:text="@string/button_5_string"
            android:textColor="@color/grey_20"
            android:textSize="@dimen/text_size_for_menu_buttons" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/top_frame"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        app:cardCornerRadius="10dp"
        android:layout_marginHorizontal="@dimen/margin_mini"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/moto_image"
                android:layout_width="@dimen/height_top_bar"
                android:layout_height="match_parent"
                android:contentDescription="@string/simple_string"
                android:src="@drawable/moto" />
            <ImageView
                android:id="@+id/moto_image2"
                android:layout_width="@dimen/height_top_bar"
                android:layout_height="match_parent"
                android:contentDescription="@string/simple_string"
                android:src="@drawable/moto" />
            <ImageView
                android:id="@+id/moto_image3"
                android:layout_width="@dimen/height_top_bar"
                android:layout_height="match_parent"
                android:contentDescription="@string/simple_string"
                android:src="@drawable/moto" />
            <ImageView
                android:id="@+id/moto_image4"
                android:layout_width="@dimen/height_top_bar"
                android:layout_height="match_parent"
                android:contentDescription="@string/simple_string"
                android:src="@drawable/moto" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/frameLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_top_bar"
        android:background="@color/dark_10"
        app:layout_constraintBottom_toBottomOf="parent" >
                    <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/moto_imag1e"
                    android:layout_width="@dimen/height_top_bar"
                    android:layout_height="@dimen/height_top_bar"
                    android:contentDescription="@string/simple_string"
                    android:src="@drawable/moto" />
                <ImageView
                    android:id="@+id/moto_imag1e2"
                    android:layout_width="@dimen/height_top_bar"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/simple_string"
                    android:src="@drawable/moto" />
                <ImageView
                    android:id="@+id/moto_imag1e3"
                    android:layout_width="@dimen/height_top_bar"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/simple_string"
                    android:src="@drawable/moto" />
                <ImageView
                    android:id="@+id/moto_imag1e4"
                    android:layout_width="@dimen/height_top_bar"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/simple_string"
                    android:src="@drawable/moto" />

            </LinearLayout>

    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>